[FIX] website: allow elements to overflow fixed parallax
Parallax elements are overflow:hidden so that their moving background
does not overflow. This introduces a limitation: no dropdown can
overflow the snippet either.

While a better solution should be found in master, this allows overflow
for the "fixed" parallax which does not use an overflowing background.

opw-2091324

closes odoo/odoo#41467

X-original-commit: cf5b3e1db5d312133eb1af7ff0d5471db47987e5

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -890,7 +890,6 @@ table.table_desc tr td {
 // Parallax
 .parallax {
     position: relative;
-    overflow: hidden;
 
     > * {
         position: relative;
